syntax = "proto3";

option csharp_namespace = "Order.API.Protos";

service PaymentProtoService {

	rpc AuthorizePayment (PaymentRequest) returns (PaymentResponse);  
}

message PaymentRequest {
    sint64 amount = 1;
    string userId = 2;
}

message PaymentResponse {
    bool status = 1;
    string errorMessage = 2;
}